--- a/c-legacy-releases/2024/03132024.md
+++ b/c-legacy-releases/2024/03132024.md
@@ -1,14 +1,14 @@
 ---
 title: 中央發行說明 - 2023 年 3 月
-description: 尋找 Adobe  [!DNL Experience Cloud]  產品和服務的最新發行說明和知識庫問題。了解 Experience League 即將舉辦的活動和新文件。探索  [!DNL Experience Cloud]  應用程式的最新教學課程和其他課程。
+description: 尋找Experience Cloud應用程式發行說明的連結。 檢視新的教學課程影片、閱讀支援文章，並找到Experience League上的自助資源。
 doc-type: release notes
 last-update: March 2024
 author: mfrei
 mini-toc-levels: 2
 exl-id: 62141f30-b6b4-4813-a819-35262ed8e0c1
-source-git-commit: 828aac334fdc401738e4934263345b76761a3ae8
+source-git-commit: 97ea2814679377c1aeb7691ed6916ced72c9968f
 workflow-type: tm+mt
-source-wordcount: '5572'
+source-wordcount: '5562'
 ht-degree: 99%
 
 ---
@@ -26,7 +26,7 @@ ht-degree: 99%
 * 即將推出的 Experience League 活動
 * 最新影片教學課程
 
-為了獲得最佳的自助體驗，請登入 [Experience League](https://experienceleague.adobe.com/zh-hant#home)，並在 Adobe 免費的[文件](https://experienceleague.adobe.com/docs/?lang=zh-Hant)、[課程](https://experienceleague.adobe.com/zh-hant#courses)、[活動](https://experienceleague.adobe.com/events/?lang=zh-Hant)、[社群論壇](https://experienceleaguecommunities.adobe.com/?profile.language=zh-Hant)和[支援](https://experienceleague.adobe.com/zh-hant?support-tab=home#support)等資源庫中自訂您的搜尋體驗。
+為了獲得最佳的自助體驗，請登入 [Experience League](https://experienceleague.adobe.com/#home)，並在 Adobe 免費的[文件](https://experienceleague.adobe.com/docs/)、[課程](https://experienceleague.adobe.com/#courses)、[活動](https://experienceleague.adobe.com/events/)、[社群論壇](https://experienceleaguecommunities.adobe.com/?profile.language=en)和[支援](https://experienceleague.adobe.com/?support-tab=home#support)等資源庫中自訂您的搜尋體驗。
 
 ## 2024 年 3 月
 
@@ -56,7 +56,7 @@ ht-degree: 99%
 * [[!DNL Adobe Creative Cloud for enterprise]](#creative-cloud)
 * [[!DNL Adobe Content Supply Chain Tutorials]](#content-supply-chain)
 * [客戶資料管理 - 對話](#voices)
-* [Digital Experience 藍圖](#blueprints)
+* [數位體驗藍圖](#blueprints)
 * [Adobe 產品安全性漏洞](https://helpx.adobe.com/tw/security.html)
 
 ## [!DNL Experience League] 活動和更新 {#events}
@@ -69,13 +69,13 @@ ht-degree: 99%
 
 +++詳細資料
 
-在Experience League上檢視所有[即將舉辦的活動](https://experienceleague.adobe.com/events/?lang=zh-Hant)或瀏覽[活動錄製](https://experienceleague.adobe.com/docs/events/experience-league-recorded-events/overview.html?lang=zh-Hant)。
+在Experience League上檢視所有[即將舉辦的活動](https://experienceleague.adobe.com/events/)或瀏覽[活動錄製](https://experienceleague.adobe.com/docs/events/experience-league-recorded-events/overview.html?lang=zh-Hant)。
 
 +++
 
 ## Adobe Content Supply chain {#content-supply-chain}
 
-了解關於[內容供應鏈](https://business.adobe.com/tw/solutions/adobe-genstudio.html)；這是 Adobe 一種端對端解決方案，可透過生成式 AI 和智慧型自動化來加速和簡化您的內容。
+了解關於[內容供應鏈](https://business.adobe.com/solutions/adobe-genstudio.html)；這是 Adobe 一種端對端解決方案，可透過生成式 AI 和智慧型自動化來加速和簡化您的內容。
 
 +++詳細資料
 
@@ -167,7 +167,7 @@ ht-degree: 99%
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|----|----|-----------|
-| 2024 年 2 月 |  [!DNL Adobe Experience Platform][&#128279;](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23641.html?lang=zh-Hant) 中的[!UICONTROL 預設值擷取] | 新文章 | 了解如果您需要在 [!DNL Adobe Experience Platform (AEP)] 的擷取期間設定預設值 (特別是針對 [!DNL upsert] 作業)，您必須在資料擷取過程中使用明確對應。 |
+| 2024 年 2 月 |  [!DNL Adobe Experience Platform]](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23641.html?lang=zh-Hant) 中的[[!UICONTROL 預設值擷取] | 新文章 | 了解如果您需要在 [!DNL Adobe Experience Platform (AEP)] 的擷取期間設定預設值 (特別是針對 [!DNL upsert] 作業)，您必須在資料擷取過程中使用明確對應。 |
 
 {style="table-layout:auto"}
 
@@ -215,7 +215,7 @@ ht-degree: 99%
 | 2024 年 2 月 | [建立成功事件的 Experience Platform 標記](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/implementation/experience-platform-tags/creating-tags-rules-for-success-events.html?lang=zh-Hant) | 影片 | 了解如何使用標記中的規則追蹤您網站上的轉換事件 (成功事件)。 |
 | 2024 年 2 月 | [在 Experience Platform 標記中使用 doPlugins 和實作外掛程式](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/implementation/experience-platform-tags/use-doplugins-and-implementation-plugins.html?lang=zh-Hant) | 影片 | 了解使用 doPlugins 函數的好處，並加入 Analytics 實作外掛程式以擴充資料收集。 |
 | 2024 年 2 月 | [設定內部 URL 篩選條件](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/administration/manage-report-suites/set-internal-url-filters.html?lang=zh-Hant) | 影片 | 了解關於反向連結設定，將其設定為內部反向連結 (以支援路徑報告) 或外部反向連結 (以支援反向連結/反向連結網域報告)。 |
-| 2024 年 2 月 | [標記 - 您的個人助理](https://experienceleague.adobe.com/docs/experiences-by-you/experiences-by-you/analytics/analysis-workspace/tips-and-tricks/tags-your-personal-assistant.html?lang=zh-Hant) | 文章 | 了解 Experience Platform 標記如何簡化您的數位分析，充當您的個人助理以有效找到您需要的內容。Adobe Analytics 達人 Jeff Bloomer 分享了如何充分發揮該工具潛力的專業深入見解，可讓您獲益匪淺。 |
+| 2024 年 2 月 | [標記 - 您的個人助理](https://experienceleague.adobe.com/docs/experiences-by-you/experiences-by-you/analytics/analysis-workspace/tips-and-tricks/tags-your-personal-assistant.html?lang=zh-Hant) | 文章 | 了解 Experience Platform 標記如何簡化您的數位分析，充當您的個人助理以有效找到您需要的內容。Adobe Analytics 達人 Jeff Bloomer 分享了如何充分發揮該工具潛力的專業洞察，可讓您獲益匪淺。 |
 
 {style="table-layout:auto"}
 
@@ -233,7 +233,7 @@ ht-degree: 99%
 
 ## [!DNL Customer Journey Analytics] {#cja}
 
-如需 [!DNL Customer Journey Analytics] 的最新發行資訊。查看 Experience League 上的最新教學課程與其他課程。
+尋找 [!DNL Customer Journey Analytics] 的最新版本資訊。查看 Experience League 上的最新教學課程與其他課程。
 
 +++詳細資料
 
@@ -257,7 +257,7 @@ ht-degree: 99%
 
 ## [!DNL Streaming Media Analytics] {#sma}
 
-如需 [!DNL Streaming Media Analytics] 的最新發行資訊。查看 Experience League 上的最新教學課程與其他課程。
+尋找 [!DNL Streaming Media Analytics] 的最新版本資訊。查看 Experience League 上的最新教學課程與其他課程。
 
 +++詳細資料
 
@@ -283,7 +283,7 @@ Adobe 建議您瀏覽以下資源，以隨時掌握發佈內容資訊：
 
 ### 最新版本概觀影片
 
-觀看 [2024 年 1 月版本概觀影片](https://video.tv.adobe.com/v/3448940?captions=chi_hant&quality=12")，了解 2024.01.0 (2024 年 1 月) 版本新增功能摘要。
+觀看 [2024 年 1 月版本概觀影片](https://video.tv.adobe.com/v/3427041?quality=12")，了解 2024.01.0 (2024 年 1 月) 版本新增功能摘要。
 
 ### [!DNL Experience Manager Sites] as a [!DNL Cloud Service]
 
@@ -368,7 +368,7 @@ _早期採用者計劃_
    * 此功能可使用的早期採用者計劃很有限。
    * 此功能用於恢復意外刪除的內容，不適用於災難復原。
 
-* **體驗稽核儀表板** – [Cloud Manager 體驗稽核儀表板](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/using-cloud-manager/test-results/experience-audit-dashboard.html?lang=zh-Hant)包括頁面效能分數的趨勢檢視，以及可協助您提高效能分數的深入解析和建議。體驗稽核會隨附為 Cloud Manager 生產管道中的一個步驟。
+* **體驗稽核儀表板** – [Cloud Manager 體驗稽核儀表板](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/using-cloud-manager/test-results/experience-audit-dashboard.html?lang=zh-Hant)包括頁面效能分數的趨勢檢視，以及可協助您提高效能分數的洞察和建議。體驗稽核會隨附為 Cloud Manager 生產管道中的一個步驟。
 
   該儀表板使用 Google Lighthouse，這是一種開放原始碼自動化工具，可提升網頁應用程式的品質。您可以用於在任何網頁 (公用網頁或需要身份驗證的網頁) 上執行。可用於對效能、協助工具、漸進式網頁應用程式、SEO 等進行稽核。
 
@@ -414,10 +414,10 @@ _已知問題_
 * **宣佈 2024 年 Adobe Summit 完整的 AEM 工作階段和 Labs** – 探索 2024 年 Adobe Summit AEM 工作階段和 Labs 的完整列表，這是讓您能更進一步探索 AEM 體驗的終極藍圖。請參閱 [https://adobe.ly/3HD1mw3](https://adobe.ly/3HD1mw3)。
 * **AEM as a Cloud Service 2024.1.0** – 請造訪 [https://adobe.ly/3w2lhBL](https://adobe.ly/3w2lhBL) 了解更新資訊。
 * **AEM 社群論壇使用者最新部落格**
-   * [如何透過 AEM JMX 觸發 Oak 索引，啟動套用應用程式變更的索引定義的過程](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager-blogs/how-to-trigger-oak-index-via-aem-jmx-to-start-the-process-of/ba-p/650118?profile.language=zh-Hant)
-   * [如何不將分類法移轉到 AEM Assets](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager-blogs/how-not-to-migrate-taxonomies-to-aem-assets/ba-p/648931?profile.language=zh-Hant)
-   * [探索 AEM 的隱藏力量：解鎖 OSGi 奇蹟](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager-blogs/exploring-aem-s-hidden-power-unlocking-osgi-marvels/ba-p/648162?profile.language=zh-Hant)
-   * [AEM 6.5.5 未建立索引問題 *已修復*](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager-blogs/aem-6-5-5-not-indexing-problem-fixed/ba-p/639836?profile.language=zh-Hant)
+   * [如何透過 AEM JMX 觸發 Oak 索引，啟動套用應用程式變更的索引定義的過程](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager-blogs/how-to-trigger-oak-index-via-aem-jmx-to-start-the-process-of/ba-p/650118)
+   * [如何不將分類法移轉到 AEM Assets](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager-blogs/how-not-to-migrate-taxonomies-to-aem-assets/ba-p/648931)
+   * [探索 AEM 的隱藏力量：解鎖 OSGi 奇蹟](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager-blogs/exploring-aem-s-hidden-power-unlocking-osgi-marvels/ba-p/648162)
+   * [AEM 6.5.5 未建立索引問題 *已修復*](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager-blogs/aem-6-5-5-not-indexing-problem-fixed/ba-p/639836)
 
 
 ### Experience Manager 發行資訊
@@ -496,12 +496,12 @@ _已知問題_
 
 [!DNL Experience Manager Guides] is an application deployed onto AEM. It is a powerful, enterprise-grade component content management solution (CCMS) which enables native DITA support in Adobe Experience Manager, empowering AEM to handle DITA-based content creation and delivery.
 
-Learn more about [[!DNL Experience Manager Guides]](https://business.adobe.com/tw/products/experience-manager/guides/features.html).
+Learn more about [[!DNL Experience Manager Guides]](https://business.adobe.com/products/experience-manager/guides/features.html).
 
 ### Additional resources
 
-* [[!DNL Experience Manager Guides]](https://experienceleague.adobe.com/docs/experience-manager-guides-learn/videos/overview.html?lang=zh-Hant) - tutorials on Experience League
-* [[!DNL Experience Manager Guides] Learn & Support](https://helpx.adobe.com/tw/support/xml-documentation-for-experience-manager.html) - product documentation -->
+* [[!DNL Experience Manager Guides]](https://experienceleague.adobe.com/docs/experience-manager-guides-learn/videos/overview.html) - tutorials on Experience League
+* [[!DNL Experience Manager Guides] Learn & Support](https://helpx.adobe.com/support/xml-documentation-for-experience-manager.html) - product documentation -->
 
 ## [!DNL Adobe Commerce] {#commerce}
 
@@ -509,7 +509,7 @@ Learn more about [[!DNL Experience Manager Guides]](https://business.adobe.com/t
 
 +++詳細資料
 
-* 請參閱 [&#x200B; [!DNL Adobe Commerce]  和  [!DNL Magento Open Source] 發行說明](https://experienceleague.adobe.com/docs/commerce-operations/release/notes/overview.html?lang=zh-Hant)以取得最新資訊。
+* 請參閱 [ [!DNL Adobe Commerce]  和  [!DNL Magento Open Source] 發行說明](https://experienceleague.adobe.com/docs/commerce-operations/release/notes/overview.html?lang=zh-Hant)以取得最新資訊。
 * 請參閱「[Adobe Commerce 服務指南](https://experienceleague.adobe.com/docs/commerce-merchant-services/user-guides/home.html?lang=zh-Hant)」以查看 Commerce 服務發行資訊和文件。
 * 請參閱[產品可用性](https://experienceleague.adobe.com/docs/commerce-operations/release/product-availability.html?lang=zh-Hant)以存取個別的產品發行說明並確認可用性。
 
@@ -540,7 +540,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 ## [!DNL Target] {#target}
 
-取得 [!DNL Adobe Target] 的預發行說明、最新發行說明和新教學課程。
+取得 [!DNL Adobe Target] 的預發行說明、最新發行說明和新教學課程的存取權。
 
 +++詳細資料
 
@@ -578,7 +578,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 | 發佈日期 | 版本 | 名稱 | 類型 | 說明 |
 | ----------| ---------- | ---------- | ---------- |---------- |
 | 2024 年 2 月 | Campaign Web 使用者介面、Experience Platform | [使用 Experience Platform 建立客群](https://experienceleague.adobe.com/docs/campaign-web-learn/tutorials/profiles-and-audiences/create-an-audience-with-experience-platform.html?lang=zh-Hant) | 影片 | 了解如何建立在 Adobe Campaign 中使用 Experience Platform 客群的目標。 |
-| 2024 年 2 月 | Campaign Web 使用者介面 | [探索 Campaign Web 使用者介面](https://experienceleague.adobe.com/docs/campaign-web-learn/tutorials/getting-started/explore-the-web-ui.html?lang=zh-Hant) | 影片 | 瞭解如何存取及導覽 Campaign Web 使用者介面，以及如何自訂詳細目錄清單。探索 AI 支援的知識助理。 |
+| 2024 年 2 月 | Campaign Web 使用者介面 | [探索 Campaign Web 使用者介面](https://experienceleague.adobe.com/docs/campaign-web-learn/tutorials/getting-started/explore-the-web-ui.html?lang=zh-Hant) | 影片 | 瞭解如何存取及導覽 Campaign Web 使用者介面，以及如何自訂庫存清單。探索 AI 支援的知識助理。 |
 | 2024 年 2 月 | Campaign Web 使用者介面 | [從頭開始設計電子郵件內容](https://experienceleague.adobe.com/docs/campaign-web-learn/tutorials/messages-and-deliveries/create-email-content-from-scratch.html?lang=zh-Hant) | 影片 | 了解如何導覽電子郵件設計工具。了解如何從草稿開始架構及設計電子郵件、如何個人化，以及如何測試電子郵件。 |
 | 2024 年 2 月 | Campaign Web 使用者介面 | [管理和建立客群](https://experienceleague.adobe.com/docs/campaign-web-learn/tutorials/profiles-and-audiences/manage-and-build-audiences.html?lang=zh-Hant) | 影片 | 了解如何建立和管理客群、如何選取傳遞客群以及定義控制群組。 |
 | 2024 年 2 月 | Campaign Web 使用者介面 | [建立目標定位工作流程](https://experienceleague.adobe.com/docs/campaign-web-learn/tutorials/workflows/create-a-targeting-workflow.html?lang=zh-Hant) | 影片 | 了解工作流程的工作原理以及如何建立目標定位工作流程。 |
@@ -609,7 +609,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 了解 [Journey Optimizer 發行說明](https://experienceleague.adobe.com/docs/journey-optimizer/using/whats-new/release-notes.html?lang=zh-Hant)中最新功能、改善功能和修正。
 
-### 新 [!DNL Journey Optimizer]教學課程 {#tutorials-ajo}
+### [!DNL Journey Optimizer] 最新教學課程 {#tutorials-ajo}
 
 針對 Adobe [!DNL Journey Optimizer] 發佈的新影片、教學課程或課程。
 
@@ -713,12 +713,12 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 |Published|Name|Type|Description|
 | -----------| ---------- | ---------- | ---------- |
-|December 2023|[[!DNL Workfront]: Apply layout template](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23173.html?lang=zh-Hant)|New article| Learn how to apply the layout template in four ways: [!UICONTROL User profile], [!UICONTROL Job Role], [!UICONTROL Home Team], and [!UICONTROL Home Group].|
-|December 2023|[[!DNL Workfront]: proof failed to generate](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23149.html?lang=zh-Hant)|New article| Learn how to resolve the `Proof Failed to Generate` error when you upload a new proof.|
-|December 2023|[[!DNL Fusion]: `Failed to verify connection '52174'. Status Code Error: 500`](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23142.html?lang=zh-Hant)|New article| Learn how to resolve the [!DNL Workfront Fusion] error, `Failed to verify connection '52174'. Status Code Error: 500`.|
-|December 2023|[[!DNL Workfront]: Stuck export](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23080.html?lang=zh-Hant)|New article| Learn how to resolve the issue if your [!UICONTROL Kick-start] export or a [!UICONTROL Resource Planner] export is stuck.|
-|December 2023|[[!DNL Workfront Fusion]: `JWT Connection Error` for [!DNL AEM Assets Fusion]](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22911.html?lang=zh-Hant)|New article| Learn how to resolve if a `JWT connection error` occurs while configuring a connection for [!DNL AEM Assets as a Cloud Service] using the [!DNL Fusion AEM Assets] module.|
-|December 2023|[Project sharing lists are automatically pre-populated on creating new projects](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23045.html?lang=zh-Hant)|New article| Learn how to resolve if project sharing lists get automatically pre-populated.|
+|December 2023|[[!DNL Workfront]: Apply layout template](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23173.html)|New article| Learn how to apply the layout template in four ways: [!UICONTROL User profile], [!UICONTROL Job Role], [!UICONTROL Home Team], and [!UICONTROL Home Group].|
+|December 2023|[[!DNL Workfront]: proof failed to generate](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23149.html)|New article| Learn how to resolve the `Proof Failed to Generate` error when you upload a new proof.|
+|December 2023|[[!DNL Fusion]: `Failed to verify connection '52174'. Status Code Error: 500`](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23142.html)|New article| Learn how to resolve the [!DNL Workfront Fusion] error, `Failed to verify connection '52174'. Status Code Error: 500`.|
+|December 2023|[[!DNL Workfront]: Stuck export](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23080.html)|New article| Learn how to resolve the issue if your [!UICONTROL Kick-start] export or a [!UICONTROL Resource Planner] export is stuck.|
+|December 2023|[[!DNL Workfront Fusion]: `JWT Connection Error` for [!DNL AEM Assets Fusion]](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22911.html)|New article| Learn how to resolve if a `JWT connection error` occurs while configuring a connection for [!DNL AEM Assets as a Cloud Service] using the [!DNL Fusion AEM Assets] module.|
+|December 2023|[Project sharing lists are automatically pre-populated on creating new projects](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23045.html)|New article| Learn how to resolve if project sharing lists get automatically pre-populated.|
 
 {style="table-layout:auto"}
 -->
@@ -746,11 +746,11 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 ### [!DNL Advertising DSP] 中的新功能 {#advertising-dsp}
 
-查看 [&#x200B; [!DNL Advertising DSP] 中的新增功能](https://experienceleague.adobe.com/docs/advertising/dsp/home.html?lang=zh-Hant)
+查看 [ [!DNL Advertising DSP] 中的新增功能](https://experienceleague.adobe.com/docs/advertising/dsp/home.html?lang=zh-Hant)
 
 ### [!DNL Advertising Search, Social, & Commerce] 中的新功能 {#advertising-search}
 
-查看 [&#x200B; [!DNL Advertising Search, Social, & Commerce] 中的新增功能](https://experienceleague.adobe.com/docs/advertising/search-social-commerce/home.html?lang=zh-Hant)
+查看 [ [!DNL Advertising Search, Social, & Commerce] 中的新增功能](https://experienceleague.adobe.com/docs/advertising/search-social-commerce/home.html?lang=zh-Hant)
 
 +++
 
@@ -762,7 +762,7 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 >[!NOTE]
 >
->_[!DNL Adobe Primetime]_&#x200B;現在稱為&#x200B;_[!DNL Adobe Pass]_。在品牌重塑工作完成之前，您可能很快就會在文件中看到這兩個品牌名稱。
+>_[!DNL Adobe Primetime]_現在稱為_[!DNL Adobe Pass]_。在品牌重塑工作完成之前，您可能很快就會在文件中看到這兩個品牌名稱。
 
 請參閱 [Adobe Pass 發行說明](https://experienceleague.adobe.com/docs/pass.html?lang=zh-Hant)以找到特定版本的資訊、系統需求、限制、已修正的問題和已知問題。
 
