--- a/c-legacy-releases/2024/04172024.md
+++ b/c-legacy-releases/2024/04172024.md
@@ -1,14 +1,14 @@
 ---
 title: 中央發行說明 - 2024 年 4 月
-description: 尋找 Adobe  [!DNL Experience Cloud]  產品和服務的最新發行說明和知識庫問題。了解 Experience League 即將舉辦的活動和新文件。探索  [!DNL Experience Cloud]  應用程式的最新教學課程和其他課程。
+description: 尋找Experience Cloud應用程式發行說明的連結。 檢視新的教學課程影片、閱讀支援文章，並找到Experience League上的自助資源。
 doc-type: release notes
 last-update: April 2024
 author: mfrei
 mini-toc-levels: 2
 exl-id: e5d888f4-a5f9-4ce4-bdd5-a973151f374c
-source-git-commit: 828aac334fdc401738e4934263345b76761a3ae8
+source-git-commit: 97ea2814679377c1aeb7691ed6916ced72c9968f
 workflow-type: tm+mt
-source-wordcount: '5812'
+source-wordcount: '5802'
 ht-degree: 99%
 
 ---
@@ -26,7 +26,7 @@ ht-degree: 99%
 * 即將推出的 Experience League 活動
 * 最新影片教學課程
 
-為了獲得最佳的自助體驗，請登入 [Experience League](https://experienceleague.adobe.com/zh-hant#home)，並在 Adobe 免費的[文件](https://experienceleague.adobe.com/zh-hant/docs)、[課程](https://experienceleague.adobe.com/zh-hant#courses)、[活動](https://experienceleague.adobe.com/events/?lang=zh-Hant)、[社群論壇](https://experienceleaguecommunities.adobe.com/?profile.language=zh-Hant)和[支援](https://experienceleague.adobe.com/zh-hant?support-tab=home#support)等資源庫中自訂您的搜尋體驗。
+為了獲得最佳的自助體驗，請登入 [Experience League](https://experienceleague.adobe.com/#home)，並在 Adobe 免費的[文件](https://experienceleague.adobe.com/zh-hant/docs)、[課程](https://experienceleague.adobe.com/#courses)、[活動](https://experienceleague.adobe.com/events/)、[社群論壇](https://experienceleaguecommunities.adobe.com/?profile.language=en)和[支援](https://experienceleague.adobe.com/?support-tab=home#support)等資源庫中自訂您的搜尋體驗。
 
 ## 2024 年 4 月
 
@@ -56,7 +56,7 @@ ht-degree: 99%
 * [[!DNL Adobe Creative Cloud for enterprise]](#creative-cloud)
 * [[!DNL Adobe Content Supply Chain Tutorials]](#content-supply-chain)
 * [客戶資料管理 - 對話](#voices)
-* [Digital Experience 藍圖](#blueprints)
+* [數位體驗藍圖](#blueprints)
 * [Adobe 產品安全性漏洞](https://helpx.adobe.com/tw/security.html)
 
 ## [!DNL Experience League] 活動和更新 {#events}
@@ -67,7 +67,7 @@ ht-degree: 99%
 
 +++詳細資料
 
-了解[即將舉行的活動](https://experienceleague.adobe.com/events/?lang=zh-Hant)或瀏覽 Experience League 上的[活動錄影](https://experienceleague.adobe.com/zh-hant/docs/events/experience-league-recorded-events/overview)。
+了解[即將舉行的活動](https://experienceleague.adobe.com/events/)或瀏覽 Experience League 上的[活動錄影](https://experienceleague.adobe.com/zh-hant/docs/events/experience-league-recorded-events/overview)。
 
 +++
 
@@ -79,7 +79,7 @@ ht-degree: 99%
 
 | Published | Name | Type | Description |
 | -----------| ---------- | ---------- | ---------- |
-|February 2024|[Content Supply Chain Tutorials](https://experienceleague.adobe.com/docs/content-supply-chain-learn/tutorials/overview.html?lang=zh-Hant)|Videos |View content supply chain tutorials on Experience League. Content supply chain is Adobe's an end-to-end solution to accelerate and simplify your content supply chain with generative AI and intelligent automation.|
+|February 2024|[Content Supply Chain Tutorials](https://experienceleague.adobe.com/docs/content-supply-chain-learn/tutorials/overview.html)|Videos |View content supply chain tutorials on Experience League. Content supply chain is Adobe's an end-to-end solution to accelerate and simplify your content supply chain with generative AI and intelligent automation.|
 
 {style="table-layout:auto"}
 
@@ -196,7 +196,7 @@ New articles and updates to existing articles for [!DNL Analytics].
 
 |Published|Name|Type|Description|
 |---------|----|----|-----------|
-|February 2024|[Project link (URL) generated changes when you share an Adobe Analytics workspace](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21698.html?lang=zh-Hant)|New article| This article offers a solution to the Adobe Analytics issue where a project link changes each time a workspace project link is retrieved in a shared Adobe Analytics workspace. You can use either the newly generated link or the previously generated link for access to the target project.|
+|February 2024|[Project link (URL) generated changes when you share an Adobe Analytics workspace](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21698.html)|New article| This article offers a solution to the Adobe Analytics issue where a project link changes each time a workspace project link is retrieved in a shared Adobe Analytics workspace. You can use either the newly generated link or the previously generated link for access to the target project.|
 
 {style="table-layout:auto"}
 -->
@@ -205,7 +205,7 @@ New articles and updates to existing articles for [!DNL Analytics].
 
 ## [!DNL Customer Journey Analytics] {#cja}
 
-如需 [!DNL Customer Journey Analytics] 的最新發行資訊。查看 Experience League 上的最新教學課程與其他課程。
+尋找 [!DNL Customer Journey Analytics] 的最新版本資訊。查看 Experience League 上的最新教學課程與其他課程。
 
 +++詳細資料
 
@@ -222,7 +222,7 @@ New articles and updates to existing articles for [!DNL Analytics].
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2024 年 4 月 | [新增預測至您的視覺效果中](https://experienceleague.adobe.com/zh-hant/docs/customer-journey-analytics-learn/tutorials/analysis-workspace/visualizations/forecasting) | 影片 | 了解如何將預測數字新增至 Customer Journey Analytics 中的時間序列視覺效果。 |
-| 2024 年 3 月 | [使用者串流時間表分析](https://experienceleague.adobe.com/zh-hant/docs/customer-journey-analytics-learn/tutorials/guided-analysis/user-stream/user-stream-timeline-analysis) | 影片 | 了解 [!UICONTROL &#x200B; 中的]使用者串流[!DNL Adobe Product Analytics]視圖如何幫助您找到體驗模式、講述更好的使用者故事並驗證實作。 |
+| 2024 年 3 月 | [使用者串流時間表分析](https://experienceleague.adobe.com/zh-hant/docs/customer-journey-analytics-learn/tutorials/guided-analysis/user-stream/user-stream-timeline-analysis) | 影片 | 了解 [!UICONTROL  中的]使用者串流[!DNL Adobe Product Analytics]視圖如何幫助您找到體驗模式、講述更好的使用者故事並驗證實作。 |
 | 2024 年 3 月 | [新增預測至您的視覺效果中](https://experienceleague.adobe.com/zh-hant/docs/customer-journey-analytics-learn/tutorials/analysis-workspace/visualizations/forecasting) | 影片 | 了解如何將預測數字新增至 Customer Journey Analytics 中的時間序列視覺效果。 |
 
 {style="table-layout:auto"}
@@ -231,7 +231,7 @@ New articles and updates to existing articles for [!DNL Analytics].
 
 ## [!DNL Streaming Media Analytics] {#sma}
 
-如需 [!DNL Streaming Media Analytics] 的最新發行資訊。查看 Experience League 上的最新教學課程與其他課程。
+尋找 [!DNL Streaming Media Analytics] 的最新版本資訊。查看 Experience League 上的最新教學課程與其他課程。
 
 +++詳細資料
 
@@ -257,7 +257,7 @@ Adobe 建議您瀏覽以下資源，以隨時掌握發佈內容資訊：
 
 <!-- ### Latest Release Overview video
 
-Watch the [November 2023 Release Overview video](https://experienceleague.adobe.com/docs/events/aemcs-release-update-recordings/2023/2023-11-0.html?lang=zh-Hant) for a summary of the features added in the 2023.11.0 (November 2023) release. -->
+Watch the [November 2023 Release Overview video](https://experienceleague.adobe.com/docs/events/aemcs-release-update-recordings/2023/2023-11-0.html?lang=en) for a summary of the features added in the 2023.11.0 (November 2023) release. -->
 
 ### [!DNL Experience Manager Sites] as a [!DNL Cloud Service]
 
@@ -336,7 +336,7 @@ _早期採用者計劃_
    * 此功能可使用的早期採用者計劃很有限。
    * 此功能用於恢復意外刪除的內容，不適用於災難復原。
 
-* **體驗稽核儀表板** – [Cloud Manager 體驗稽核儀表板](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-cloud-service/content/implementing/using-cloud-manager/test-results/experience-audit-dashboard)包括頁面效能分數的趨勢檢視，以及可協助您提高效能分數的深入解析和建議。體驗稽核會隨附為 Cloud Manager 生產管道中的一個步驟。
+* **體驗稽核儀表板** – [Cloud Manager 體驗稽核儀表板](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-cloud-service/content/implementing/using-cloud-manager/test-results/experience-audit-dashboard)包括頁面效能分數的趨勢檢視，以及可協助您提高效能分數的洞察和建議。體驗稽核會隨附為 Cloud Manager 生產管道中的一個步驟。
 
   該儀表板使用 Google Lighthouse，這是一種開放原始碼自動化工具，可提升網頁應用程式的品質。您可以用於在任何網頁 (公用網頁或需要身份驗證的網頁) 上執行。可用於對效能、協助工具、漸進式網頁應用程式、SEO 等進行稽核。
 
@@ -404,7 +404,7 @@ _已知問題_
 | 2024 年 4 月 | AEM CS | [帶著您自己的 [!DNL Cloudflare] CDN](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-learn/cloud-service/expert-resources/cloud-5/season-3/cloud5-byo-cloudflare-cdn) | 影片 | 探索如何將您自己的 [!DNL Cloudflare] CDN 設定到 Edge Delivery Services。 |
 | 2024 年 4 月 | AEM Assets | [匯出資產](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-learn/assets/sharing/export) | 影片 | 了解如何使用可自訂的 Node.js 程式碼將資產匯出至您的本機。 |
 | 2024 年 4 月 | AEM Headless | [保護 AEM Headless 中的內容](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-learn/getting-started-with-aem-headless/how-to/protected-content) | 影片 | 從 AEM Publish 提供 AEM Headless 內容時，確保資料的完整性和安全性對於提供敏感內容至關重要。本教學課程會逐步介紹如何保護 AEM Headless GraphQL API 端點提供的內容。 |
-| 2024 年 4 月 | AEM CS | [AEM Champion 最佳實務與提示 - 移轉後](https://experienceleague.adobe.com/zh-hant/docs/experiences-by-you/experiences-by-you/experience-manager/cloud-service/cloud-manager-best-practices/post-migration) | 影片 | 探究 AEM 專家 Wilson Faure 的寶貴分析和見解。在本影片中，他會深入探討最佳化移轉所需的基本移轉後策略和技巧。明確移轉後幾天或幾週內需專注的重點。 |
+| 2024 年 4 月 | AEM CS | [AEM Champion 最佳實務與提示 - 移轉後](https://experienceleague.adobe.com/zh-hant/docs/experiences-by-you/experiences-by-you/experience-manager/cloud-service/cloud-manager-best-practices/post-migration) | 影片 | 探究 AEM 專家 Wilson Faure 的無價見解。在本影片中，他會深入探討最佳化移轉所需的基本移轉後策略和技巧。明確移轉後幾天或幾週內需專注的重點。 |
 | 2024 年 4 月 | AEM Assets | [Cloud 5 - 整合 AEM Assets 文件製作](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-learn/cloud-service/expert-resources/cloud-5/season-3/cloud5-integrate-assets) | 影片 | 探索如何將 AEM Assets 與文件製作整合，以透過 Edge Delivery Services 提供卓越的體驗。 |
 | 2024 年 4 月 | AEM Sites | [Edge Delivery Services 中的產生變化版本](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-learn/sites/document-authoring/how-to/generate-variations) | 影片 | 介紹 Edge Delivery Services 中的產生變化版本，並了解此功能對行銷人員有哪些用處。 |
 | 2024 年 4 月 | AEM Sites | [在 Edge Delivery Services 中，設定產生變化版本的 Sidekick](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-learn/sites/document-authoring/how-to/generate-variations-sidekick-config) | 影片 | 探索如何在 Edge Delivery Services 文件製作中設定產生變化版本的 Sidekick。 |
@@ -412,7 +412,7 @@ _已知問題_
 | 2024 年 4 月 | AEM Sites | [Edge Delivery Services 中的生成式 AI 自訂提示範本](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-learn/sites/document-authoring/how-to/custom-prompt-templates) | 影片 | 探索如何在 Edge Delivery Services 文件製作中建立生成式 AI 自訂提示範本來產生內容變化版本。 |
 | 2024 年 4 月 | AEM Sites | [Edge Delivery Services 中的生成式 AI 儲存自訂提示範本](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-learn/sites/document-authoring/how-to/save-custom-prompt-template) | 影片 | 探索如何在 Edge Delivery Services 文件製作中儲存生成式 AI 自訂提示範本來產生內容變化版本。 |
 | 2024 年 3 月 | AEM Forms | [AEM Forms Designer](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-learn/forms/forms-designer/design-view) | 影片 | 查看新的短視頻 [!DNL Experience Manager Forms]。 |
-| 2024 年 3 月 | AEM CS | [AEM Champion 最佳實務與提示 - 解決移轉到 AEM as a Cloud Service 時的常見困難和挑戰](https://experienceleague.adobe.com/zh-hant/docs/experiences-by-you/experiences-by-you/experience-manager/cloud-service/cloud-manager-best-practices/migration-challenges) | 影片 | 探究 AEM 專家 Wilson Faure 分享的寶貴見解和最佳實務。在本影片中，他深入探討了移轉至 AEM as a Cloud Service 期間遇到的常見困難和挑戰，並提供了建議和專家提示，以利順利且成功進行轉換。 |
+| 2024 年 3 月 | AEM CS | [AEM Champion 最佳實務與提示 - 解決移轉到 AEM as a Cloud Service 時的常見困難和挑戰](https://experienceleague.adobe.com/zh-hant/docs/experiences-by-you/experiences-by-you/experience-manager/cloud-service/cloud-manager-best-practices/migration-challenges) | 影片 | 探究 AEM 專家 Wilson Faure 分享的寶貴洞察和最佳實務。在本影片中，他深入探討了移轉至 AEM as a Cloud Service 期間遇到的常見困難和挑戰，並提供了建議和專家提示，以利順利且成功進行轉換。 |
 | 2024 年 3 月 | AEM Sites | [Cloud 5 - 在 [!DNL Edge Delivery Services]中發佈、取消發佈事件](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-learn/cloud-service/expert-resources/cloud-5/season-3/cloud5-publish-events)  | 影片 | 探索在 [!DNL Edge Delivery Services] 發佈和取消發佈時觸發的事件，以及使用這些事件的使用案例和範例。 |
 | 2024 年 3 月 | AEM Sites | [查詢索引和 Excel 公式](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-learn/cloud-service/expert-resources/cloud-5/season-3/cloud5-query-indexes) | 影片 | 探索查詢索引以及如何編寫 Excel 公式來使用 [!DNL Edge Delivery Services] 操作和排序資料集。 |
 | 2024 年 3 月 | AEM Assets | [AEM Assets 影片和教學課程](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-learn/assets/overview) | 影片 | 在 Experience League 上，尋找 AEM Assets 的新影片和教學課程。 |
@@ -427,7 +427,7 @@ _已知問題_
 | 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|--------|---------|---------|
 | 2024 年 3 月 | [重新命名預設 `OOTB` 管理員群組並失去管理員權限](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-23602) | 新文章 | 了解在重新命名預設 `OOTB` 管理員群組並失去管理員權限時，如何重新建立產品資料檔。 |
-| 2024 年 3 月 | [&#x200B; [!DNL AEM] Cloud 上出現間歇性緩慢情形](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-23840) | 新文章 | 了解處理 [!DNL Adobe Experience Manager as a Cloud Service] ([!DNL AEM] Cloud) 內啟動的建議方法 。 |
+| 2024 年 3 月 | [ [!DNL AEM] Cloud 上出現間歇性緩慢情形](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-23840) | 新文章 | 了解處理 [!DNL Adobe Experience Manager as a Cloud Service] ([!DNL AEM] Cloud) 內啟動的建議方法 。 |
 | 2024 年 3 月 | [[!UICONTROL CTT (內容傳輸工具)] 是否適用於雲端執行個體之間](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-23865) | 新文章 | 本文旨在討論 [!UICONTROL CTT (內容傳輸工具)] 是否可移轉 [!DNL AEM as a Cloud Service] 中的雲端執行個體之間的現有內容。 |
 | 2024 年 3 月 | [內容作者無法在專案中選取「[!UICONTROL 翻譯設定]」](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-23880) | 新文章 | 本文深入分析了內容作者面臨無法在 [!DNL AEM] 專案中選取「[!UICONTROL 雲端設定]」的問題。 |
 | 2024 年 3 月 | [[!DNL Adobe Experience Manager]：連結啟動頁面中的調整](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-23939) | 新文章 | 了解當啟動頁面中的交叉連結應重寫為 `/content/launches` 下的路徑但未重寫時，[!DNL AEM] 如何調整啟動頁面中的連結。 |
@@ -442,10 +442,10 @@ _已知問題_
 | 2024 年 3 月 | [[!DNL Adobe Experience Manager]：如何解決在 [!DNL AEM] 雲端服務[!UICONTROL 前端管道]](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-23895)中的 `BUILD_NPM_AUDIT_ERROR` 問題 | 新文章 | 了解當前端管道的首次執行因內部錯誤而失敗時如何解決問題。 |
 | 2024 年 3 月 | [!UICONTROL IMS]  設定中的[`client_secret`正在取消設定](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-23909) | 新文章 | 了解如何在某些 [!DNL Adobe Experience Manager] ([!DNL AEM]) 環境中解決問題，特別是從早期版本升級的環境中，管理員可能會遇到 [!UICONTROL IMS] 設定在 [!DNL AEM] 重新啟動後失敗的問題。  |
 | 2024 年 3 月 | [當具有 [!DNL ZIP] 壓縮格式的 [!DNL Tiff] 檔案上傳到 [!DNL AEM Assets]時，不會產生任何轉譯](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-23916) | 新文章 | 了解如何將具備 [!DNL ZIP] 壓縮格式的 [!DNL Tiff] 檔案上傳至 [!DNL AEM Assets] 以及產生轉譯。 |
-| 2024 年 3 月 | [[!DNL AEM Dynamic Media] 影片觀看者分享嵌入連結，但卻見不到  [!DNL URL] &#x200B;](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-23941) | 新文章 | 本文提供了解決以下問題的方法： [!DNL Adobe Experience Manager] ([!DNL AEM Dynamic Media]) 影片觀看者分享嵌入連結，但卻見不到 [!DNL URL]。 |
+| 2024 年 3 月 | [[!DNL AEM Dynamic Media] 影片觀看者分享嵌入連結，但卻見不到  [!DNL URL] ](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-23941) | 新文章 | 本文提供了解決以下問題的方法： [!DNL Adobe Experience Manager] ([!DNL AEM Dynamic Media]) 影片觀看者分享嵌入連結，但卻見不到 [!DNL URL]。 |
 | 2024 年 3 月 | [預設 [!DNL GraphQL Query Executor] 設定選項](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-23945) | 新文章 | 了解如何解決由最新 [!DNL GraphQL Java] 更新中預設解析器選項所引起在 [!DNL GraphQL] 查詢中的 [!DNL Denial of Service] 錯誤。   |
 | 2024 年 3 月 | [`javax.jcr.nodetype.ConstraintViolationException: OakConstraint0027` 錯誤出現 (當移轉  [!DNL AEM] 中使用者和群組時)](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-23947) | 新文章 | 了解如何解決封包使用者和群組時的問題，確保避免封包 [!DNL out-of-the-box] 使用者，包括管理員和匿名使用者。 |
-| 2024 年 3 月 | [&#x200B; [!DNL Live Copy] 推出的標籤繼承問題](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-23961) | 新文章 | 了解如何解決透過 [!UICONTROL 網站上的] 頁面屬性 [!DNL Blueprint] 對話框新增標記時出現的問題，確保將它們推出到 [!DNL Live Copies] 透過新增 `tags` 到規則運算式來推出。 |
+| 2024 年 3 月 | [ [!DNL Live Copy] 推出的標籤繼承問題](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-23961) | 新文章 | 了解如何解決透過 [!UICONTROL 網站上的] 頁面屬性 [!DNL Blueprint] 對話框新增標記時出現的問題，確保將它們推出到 [!DNL Live Copies] 透過新增 `tags` 到規則運算式來推出。 |
 | 2024 年 3 月 | [建立新篩選器時無法在 [!UICONTROL Package Manager] 中檢視子目錄](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-23975) | 新文章 | 了解為需要建立含子目錄之套組的使用者解決方案。在 [!DNL Adobe Experience Manager] ([!DNL AEM]) 中，管理員在嘗試新增篩選器時遇到在 [!UICONTROL Package Manager UI]中看不見子目錄。 |
 
 {style="table-layout:auto"}
@@ -466,12 +466,12 @@ _已知問題_
 
 [!DNL Experience Manager Guides] is an application deployed onto AEM. It is a powerful, enterprise-grade component content management solution (CCMS) which enables native DITA support in Adobe Experience Manager, empowering AEM to handle DITA-based content creation and delivery.
 
-Learn more about [[!DNL Experience Manager Guides]](https://business.adobe.com/tw/products/experience-manager/guides/features.html).
+Learn more about [[!DNL Experience Manager Guides]](https://business.adobe.com/products/experience-manager/guides/features.html).
 
 ### Additional resources
 
-* [[!DNL Experience Manager Guides]](https://experienceleague.adobe.com/docs/experience-manager-guides-learn/videos/overview.html?lang=zh-Hant) - tutorials on Experience League
-* [[!DNL Experience Manager Guides] Learn & Support](https://helpx.adobe.com/tw/support/xml-documentation-for-experience-manager.html) - product documentation -->
+* [[!DNL Experience Manager Guides]](https://experienceleague.adobe.com/docs/experience-manager-guides-learn/videos/overview.html) - tutorials on Experience League
+* [[!DNL Experience Manager Guides] Learn & Support](https://helpx.adobe.com/support/xml-documentation-for-experience-manager.html) - product documentation -->
 
 ## [!DNL Adobe Commerce] {#commerce}
 
@@ -479,7 +479,7 @@ Learn more about [[!DNL Experience Manager Guides]](https://business.adobe.com/t
 
 +++詳細資料
 
-* 請參閱 [&#x200B; [!DNL Adobe Commerce]  和  [!DNL Magento Open Source] 發行說明](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/notes/overview)以取得最新資訊。
+* 請參閱 [ [!DNL Adobe Commerce]  和  [!DNL Magento Open Source] 發行說明](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/notes/overview)以取得最新資訊。
 * 請參閱「[Adobe Commerce 服務指南](https://experienceleague.adobe.com/zh-hant/docs/commerce-merchant-services/user-guides/home)」以查看 Commerce 服務發行資訊和文件。
 * 請參閱[產品可用性](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/product-availability)以存取個別的產品發行說明並確認可用性。
 
@@ -518,7 +518,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 ## [!DNL Target] {#target}
 
-取得 [!DNL Adobe Target] 的預發行說明、最新發行說明和新教學課程。
+取得 [!DNL Adobe Target] 的預發行說明、最新發行說明和新教學課程的存取權。
 
 +++詳細資料
 
@@ -665,7 +665,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 在 Experience League 上找到全新 [!DNL Workfront] 教學課程和活動。
 
 |2024 年 4 月|[[!DNL Workfront] 近期活動](https://experienceleague.adobe.com/zh-hant/docs/events/workfront-recordings/overview)|多段影片 |查看 Experience League 近期所有 [!DNL Workfront] 活動。|
-|2024 年 4 月|[所有即將舉辦的活動](https://experienceleague.adobe.com/events?lang=zh-Hant)|多段影片 |查看 Experience League 上所有即將舉辦的活動 (所有應用程式)。|
+|2024 年 4 月|[所有即將舉辦的活動](https://experienceleague.adobe.com/events)|多段影片 |查看 Experience League 上所有即將舉辦的活動 (所有應用程式)。|
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
@@ -685,12 +685,12 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 |Published|Name|Type|Description|
 | -----------| ---------- | ---------- | ---------- |
-|December 2023|[[!DNL Workfront]: Apply layout template](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23173.html?lang=zh-Hant)|New article| Learn how to apply the layout template in four ways: [!UICONTROL User profile], [!UICONTROL Job Role], [!UICONTROL Home Team], and [!UICONTROL Home Group].|
-|December 2023|[[!DNL Workfront]: proof failed to generate](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23149.html?lang=zh-Hant)|New article| Learn how to resolve the `Proof Failed to Generate` error when you upload a new proof.|
-|December 2023|[[!DNL Fusion]: `Failed to verify connection '52174'. Status Code Error: 500`](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23142.html?lang=zh-Hant)|New article| Learn how to resolve the [!DNL Workfront Fusion] error, `Failed to verify connection '52174'. Status Code Error: 500`.|
-|December 2023|[[!DNL Workfront]: Stuck export](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23080.html?lang=zh-Hant)|New article| Learn how to resolve the issue if your [!UICONTROL Kick-start] export or a [!UICONTROL Resource Planner] export is stuck.|
-|December 2023|[[!DNL Workfront Fusion]: `JWT Connection Error` for [!DNL AEM Assets Fusion]](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22911.html?lang=zh-Hant)|New article| Learn how to resolve if a `JWT connection error` occurs while configuring a connection for [!DNL AEM Assets as a Cloud Service] using the [!DNL Fusion AEM Assets] module.|
-|December 2023|[Project sharing lists are automatically pre-populated on creating new projects](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23045.html?lang=zh-Hant)|New article| Learn how to resolve if project sharing lists get automatically pre-populated.|
+|December 2023|[[!DNL Workfront]: Apply layout template](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23173.html)|New article| Learn how to apply the layout template in four ways: [!UICONTROL User profile], [!UICONTROL Job Role], [!UICONTROL Home Team], and [!UICONTROL Home Group].|
+|December 2023|[[!DNL Workfront]: proof failed to generate](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23149.html)|New article| Learn how to resolve the `Proof Failed to Generate` error when you upload a new proof.|
+|December 2023|[[!DNL Fusion]: `Failed to verify connection '52174'. Status Code Error: 500`](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23142.html)|New article| Learn how to resolve the [!DNL Workfront Fusion] error, `Failed to verify connection '52174'. Status Code Error: 500`.|
+|December 2023|[[!DNL Workfront]: Stuck export](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23080.html)|New article| Learn how to resolve the issue if your [!UICONTROL Kick-start] export or a [!UICONTROL Resource Planner] export is stuck.|
+|December 2023|[[!DNL Workfront Fusion]: `JWT Connection Error` for [!DNL AEM Assets Fusion]](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22911.html)|New article| Learn how to resolve if a `JWT connection error` occurs while configuring a connection for [!DNL AEM Assets as a Cloud Service] using the [!DNL Fusion AEM Assets] module.|
+|December 2023|[Project sharing lists are automatically pre-populated on creating new projects](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23045.html)|New article| Learn how to resolve if project sharing lists get automatically pre-populated.|
 
 {style="table-layout:auto"}
 -->
@@ -718,11 +718,11 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 ### [!DNL Advertising DSP] 中的新功能 {#advertising-dsp}
 
-查看 [&#x200B; [!DNL Advertising DSP]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/dsp/home)
+查看 [ [!DNL Advertising DSP]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/dsp/home)
 
 ### [!DNL Advertising Search, Social, & Commerce] 中的新功能 {#advertising-search}
 
-查看 [&#x200B; [!DNL Advertising Search, Social, & Commerce]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/search-social-commerce/home)
+查看 [ [!DNL Advertising Search, Social, & Commerce]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/search-social-commerce/home)
 
 +++
 
@@ -734,7 +734,7 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 >[!NOTE]
 >
->_[!DNL Adobe Primetime]_&#x200B;現在稱為&#x200B;_[!DNL Adobe Pass]_。在品牌重塑工作完成之前，您可能很快就會在文件中看到這兩個品牌名稱。
+>_[!DNL Adobe Primetime]_現在稱為_[!DNL Adobe Pass]_。在品牌重塑工作完成之前，您可能很快就會在文件中看到這兩個品牌名稱。
 
 請參閱 [Adobe Pass 發行說明](https://experienceleague.adobe.com/zh-hant/docs/pass)以找到特定版本的資訊、系統需求、限制、已修正的問題和已知問題。
 
