Updated by mdAutofix.py

--- a/c-legacy-releases/2025/01222025.md
+++ b/c-legacy-releases/2025/01222025.md
@@ -163,7 +163,7 @@ ht-degree: 99%
 | 2024 年 12 月  | [無法為  [!DNL Adobe Experience Platform] 中的  [!DNL HTTP] [!DNL API] 來源新增更多帳戶](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25431) | 新文章 | 了解如何解決當錯誤發生，導致無法將多個 [!DNL HTTP] [!DNL API] 帳戶新增為來源的問題。 |
 | 2024 年 12 月  | [[!DNL Adobe Experience Platform]：雜湊電子郵件上的串流驗證失敗](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25489) | 新文章 | 了解如何解決雜湊電子郵件上的串流驗證失敗時出現的 [!DNL Adobe Experience Platform] 問題。 |
 | 2024 年 12 月  | [使用  [!DNL Privacy API]  在  [!DNL AEP] 中處理設定檔刪除請求時出現差異](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25442) | 新文章 | 了解如何解決使用 [!DNL privacy API] 處理設定檔刪除請求時出現的差異問題。 |
-| 2024 年 12 月  | 在導入  [!DNL AEP Notebooks] 中的  [!DNL DatasetWriter]  模組時，發生 [[!DNL ImportError] ](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25472) | 新文章 | 了解如何解決在 [!DNL Adobe Experience Platform Notebooks] 中使用 [!DNL DatasetWriter] 時發生 [!DNL ImportError] 的問題。 |
+| 2024 年 12 月  | 在導入  [!DNL AEP Notebooks] 中的  [!DNL DatasetWriter]  模組時，發生 [[!DNL ImportError] &#x200B;](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25472) | 新文章 | 了解如何解決在 [!DNL Adobe Experience Platform Notebooks] 中使用 [!DNL DatasetWriter] 時發生 [!DNL ImportError] 的問題。 |
 | 2024 年 12 月  | [在  [!DNL Adobe Experience Platform] 中儘管有大量客群， [!DNL Facebook]  上顯示的客群規模仍然很小](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25440) | 新文章 | 了解如何解決當將客群細分群體從 [!DNL Adobe Experience Platform] 轉移到 [!DNL Facebook] 時，[!DNL Facebook] 上顯示的客群數量顯著小於 Adobe 中大型客群的問題。 |
 | 2024 年 12 月  | [無法將[!UICONTROL 細分群體]推送至  [!DNL Freewheel]  目標](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25350) | 新文章 | 了解如何解決將客群[!UICONTROL 細分群體]從 [!DNL Adobe Experience Platform (AEP)] 推送到 [!DNL Freewheel] 目標時出現的錯誤。 |
 | 2024 年 12 月  | [在  [!DNL Adobe Experience Platform] 中存取非生產環境中的計算屬性](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25432) | 新文章 | 了解如何解決 [!DNL Adobe Experience Platform (AEP)] 非生產環境中無法存取計算屬性的問題。 |
@@ -273,7 +273,7 @@ New tutorials published for [!DNL Customer Journey Analytics].
 
 * [最新版本概觀影片](https://experienceleague.adobe.com/zh-hant/docs/events/aemcs-release-update-recordings/overview)
 * [[!DNL Experience Manager] 版本更新和藍圖](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-release-information/aem-release-updates/home)
-* [ [!DNL Experience Manager] as a Cloud Service 最新發行說明](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-cloud-service/content/release-notes/release-notes/release-notes-current)
+* [&#x200B; [!DNL Experience Manager] as a Cloud Service 最新發行說明](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-cloud-service/content/release-notes/release-notes/release-notes-current)
 * [[!DNL Experience Manager] 6.5 Service Pack 發行說明](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-65/content/release-notes/release-notes)
 * [[!DNL Experience Manager] Cloud Manager 發行說明](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-cloud-manager/content/release-notes/current)
 * [Automated Forms Conversion Service 發行說明](https://experienceleague.adobe.com/zh-hant/docs/aem-forms-automated-conversion-service/using/release-notes)
@@ -307,16 +307,16 @@ New tutorials published for [!DNL Customer Journey Analytics].
 | 2024 年 11 月 | [[!DNL AEM Content Fragment] 模型欄位](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25300) | 新文章 | 了解 [!DNL Adobe Experience Manager (AEM) Content Fragment (CF)] 模型中欄位數量的限制和設定。 |
 | 2024 年 11 月 | [參數 `includeChildren` 在[!UICONTROL 發佈內容樹狀工作流程] (預覽代理程式) 中無法正常運作](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25257) | 新文章 | 了解如何解決客戶創建的工作流程，該工作流程用於將內容片段 ([!DNL CFs]) 發佈到預覽伺服器時，儘管包含了 `includeChildren` 選項，卻停止複製嵌套片段和未發佈的資產的問題。 |
 | 2024 年 11 月 | [在  [!DNL AEM 6.5.18]  中，由於 *[!DNL NullPointerException]*，版本清除失敗。](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25299) | 新文章 | 了解如何解決在 [!DNL Adobe Experience Manager (AEM) version 6.5.18] 中發生的已知問題，該問題導致版本清除任務失敗，並出現 `java.lang.NullPointerException`。 |
-| 2024 年 11 月 | [防止在  [!DNL AEM]  指南中意外刪除參考的主題/檔案。](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25255) | 新文章 | 了解如何解決當您在 [!DNL Adobe Experience Manager (AEM)] 中刪除在 `maps/rootmaps` 中參考的指南主題/檔案時，未顯示 [!UICONTROL  強制刪除 ] 選項以確認刪除的問題。 |
+| 2024 年 11 月 | [防止在  [!DNL AEM]  指南中意外刪除參考的主題/檔案。](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25255) | 新文章 | 了解如何解決當您在 [!DNL Adobe Experience Manager (AEM)] 中刪除在 `maps/rootmaps` 中參考的指南主題/檔案時，未顯示 [!UICONTROL &#x200B; 強制刪除 &#x200B;] 選項以確認刪除的問題。 |
 | 2024 年 11 月 | [如何區分  [!DNL AEM]  指南審核工具中的條件式文字和草稿留言。](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25309) | 新文章 | 了解如何在 [!DNL AEM Guides Review Tool] 中區分條件式文字和草稿留言。 |
-| 2024 年 11 月 |  [!DNL Brand Portal] 中的  [!DNL DMS7]  資產 [*[!DNL Fail to load data]*錯誤](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25296) | 新文章 | 了解如何解決在開啟包含 [!DNL DMS7] 資產的資料夾時，在 [!DNL Brand Portal] 中出現的 `Fail to load data` 錯誤。 |
+| 2024 年 11 月 |  [!DNL Brand Portal] 中的  [!DNL DMS7]  資產 [*[!DNL Fail to load data]*&#x200B;錯誤](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25296) | 新文章 | 了解如何解決在開啟包含 [!DNL DMS7] 資產的資料夾時，在 [!DNL Brand Portal] 中出現的 `Fail to load data` 錯誤。 |
 | 2024 年 11 月 | [疑難排解  [!DNL AEM as a Cloud Service] 中的  [!DNL HTTP 5XX]  錯誤](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25099) | 新文章 | 了解如何解決當 [!DNL HTTP 5XX] 錯誤發生在[!UICONTROL 發佈]層時，通常顯示為 `Service Unavailable` 訊息的問題。 |
 | 2024 年 11 月 | [疑難排解  [!DNL AEM as a Cloud Service] 中的  [!DNL HTTP 429]  錯誤回應](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25100) | 新文章 | 了解如何解決當 [!DNL AEMaaCS] 接收到來自過多請求的 [!DNL HTTP 429] 錯誤，並導致效能問題的問題。 |
 | 2024 年 12 月  | [Dynamic Media 同步使用者建議](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25471) | 新文章 | 了解有關 [!DNL AEM] 與 [!DNL Dynamic Media] 同步的建議。 |
 | 2024 年 12 月  | [請幫我找出是誰從  [!DNL Dynamic Media]  /  [!DNL Scene7] 中刪除了圖片](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25461) | 新文章 | 了解如何解決客戶網站上資產遺失的問題。 |
 | 2024 年 12 月  | [[!DNL Adobe Experience Manager]：確認 [!DNL JavaScript] 覆蓋](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25495)載入成功 | 新文章 | 了解如何解決當您已覆蓋的 [!DNL JavaScript] 無法正常運作時，您可能需要確認其是否正確載入。 |
 | 2024 年 12 月  | [[!DNL Adobe Experience Manager: Service Pack 21]  安裝停滯，顯示 *[!DNL org.apache.sling.installer.core]* 錯誤](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25476) | 新文章 | 了解如何解決當 `error.log` 中出現 `org.apache.sling.installer.core` 錯誤訊息後，[!DNL AEM 6.5.21] 無法繼續安裝的問題 (與特定的 bundle 版本有關)。 |
-| 2024 年 12 月  | [ [!DNL AEM] 中新[!UICONTROL 內容片段]編輯器中的自訂使用者群組鎖定在唯讀模式](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25396) | 新文章 | 本文說明如何解決在 [!DNL Adobe Experience Manager (AEM) as a Cloud Service] 中，當自訂使用者群組在存取新的[!UICONTROL 內容片段 (CF)] 編輯器時，被鎖定為唯讀模式的問題。 |
+| 2024 年 12 月  | [&#x200B; [!DNL AEM] 中新[!UICONTROL 內容片段]編輯器中的自訂使用者群組鎖定在唯讀模式](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25396) | 新文章 | 本文說明如何解決在 [!DNL Adobe Experience Manager (AEM) as a Cloud Service] 中，當自訂使用者群組在存取新的[!UICONTROL 內容片段 (CF)] 編輯器時，被鎖定為唯讀模式的問題。 |
 | 2024 年 12 月  | [預設後設資料結構未填寫值](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25371) | 新文章 | 了解如何解決當修改 `dm_video` 後設資料結構中的欄位標籤時，無法填寫預設的中繼資料值，導致欄位顯示為空的問題。 |
 
 +++
@@ -327,7 +327,7 @@ New tutorials published for [!DNL Customer Journey Analytics].
 
 +++詳細資料
 
-* 請參閱 [ [!DNL Adobe Commerce]  和  [!DNL Magento Open Source] 發行說明](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/notes/overview)以取得最新資訊。
+* 請參閱 [&#x200B; [!DNL Adobe Commerce]  和  [!DNL Magento Open Source] 發行說明](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/notes/overview)以取得最新資訊。
 * 請參閱「[Adobe [!DNL Commerce] 服務指南](https://experienceleague.adobe.com/zh-hant/docs/commerce-merchant-services/user-guides/home)」，查看 Commerce 服務版本資訊和文件。
 * 請參閱[產品可用性](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/product-availability)以存取個別的產品發行說明並確認可用性。
 
@@ -614,11 +614,11 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 ### [!DNL Advertising DSP] 中的新功能 {#advertising-dsp}
 
-查看 [ [!DNL Advertising DSP]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/dsp/home)
+查看 [&#x200B; [!DNL Advertising DSP]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/dsp/home)
 
 ### [!DNL Advertising Search, Social, & Commerce] 中的新功能 {#advertising-search}
 
-查看 [ [!DNL Advertising Search, Social, & Commerce]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/search-social-commerce/home)
+查看 [&#x200B; [!DNL Advertising Search, Social, & Commerce]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/search-social-commerce/home)
 
 +++
 
