--- a/c-legacy-releases/2025/10142025.md
+++ b/c-legacy-releases/2025/10142025.md
@@ -42,7 +42,7 @@ ht-degree: 99%
 +++檢視區段連結
 
 * [活動排程](#events)
-* [ [!DNL Experience Cloud] 中的 AI 功能](#ai)
+* [&#x200B; [!DNL Experience Cloud] 中的 AI 功能](#ai)
 * [[!DNL Adobe System Status]](#status)
 * [[!DNL Adobe Experience Cloud] - 統一介面與管理](#ecloud)
 * [[!DNL Adobe Experience Platform]](#platform)
@@ -323,7 +323,7 @@ New articles and updates to existing articles for [!DNL Customer Journey Analyti
 | 2025 年 11 月 | [針對 AEM as a Cloud Service 中的前端管道失敗進行疑難排解](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-28088) | 新文章 | 了解在 AEM as a Cloud Service 中，將完整堆疊管道轉換為僅前端 (FE) 管道時，若因平台特定的相依性和嚴格的 Linting 要求而導致建置失敗的問題要如何解決。 |
 | 2025 年 11 月 | [[!DNL Tika]  設定在 AEMaaCS-Assets 中無法運作](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-27615) | 新文章 | 了解在 AEMaaCS-Assets 中，當雲端環境中忽略自訂 [!DNL Tika] 設定 (例如排除 PDF)，並預設為現成可用 (OOTB) 設定的問題要如何解決。 |
 | 2025 年 11 月 | [在 AEMaaCS 中切換至私人 GitHub 存放庫後，遺失發行分支](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-27923) | 新文章 | 了解在 AEMaaCS 中使用私人 GitHub 存放庫設定部署管道時，分支選擇下拉式選單未顯示所有發行分支的問題要如何解決。 |
-| 2025 年 11 月 | [**[!UICONTROL 通用編輯器&#x200B;]**在 AEMaaCS 中載入不正確的 AEM 作者執行個體](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-27935) | 新文章 | 了解在 AEMaaCS 中，於作者實例上透過&#x200B;**[!UICONTROL 通用編輯器]**&#x200B;存取 Edge Delivery Services (EDS) 索引頁面，卻載入另一個製作環境的內容的問題要如何解決。 |
+| 2025 年 11 月 | [**[!UICONTROL 通用編輯器&#x200B;]**&#x200B;在 AEMaaCS 中載入不正確的 AEM 作者執行個體](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-27935) | 新文章 | 了解在 AEMaaCS 中，於作者實例上透過&#x200B;**[!UICONTROL 通用編輯器]**&#x200B;存取 Edge Delivery Services (EDS) 索引頁面，卻載入另一個製作環境的內容的問題要如何解決。 |
 | 2025 年 11 月 | [由於 AEMaaCS 內的快取過期且 `frontend-maven-plugin` 版本過時，導致管道建置失敗](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-27902) | 新文章 | 了解在 AEMaaCS 中，於 `UI.frontend` 模組執行期間管道建置失敗的問題要如何解決。 |
 | 2025 年 11 月 | [在 AEMaaCS 中，使用&#x200B;**[!UICONTROL 內容複製工具]**&#x200B;複製大型 DAM 資料夾失敗](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-27936) | 新文章 | 了解在 AEMaaCS 中，使用&#x200B;**[!UICONTROL 內容複製工具]**&#x200B;在不同製作環境之間複製大型資料夾卻失敗的問題要如何解決。 |
 | 2025 年 11 月 | [AEMaaCS 中 AEM 轉出後記錄轉送端點還原](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-27945) | 新文章 | 了解在 AEMaaCS 中，當記錄轉送設定在轉出後還原為先前端點的問題要如何解決。 |
@@ -331,7 +331,7 @@ New articles and updates to existing articles for [!DNL Customer Journey Analyti
 | 2025 年 11 月 | [修正移轉至  [!DNL CoralUI3] 後的 RTF 文字編輯器按鈕問題](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-27985) | 新文章 | 了解在 AEMaaCS 中，因將自訂對話框和用戶端程式庫從 [!DNL CoralUI2] 移轉至 [!DNL CoralUI3] 後，導致 RTF 文字編輯器的字型、大小和顏色按鈕停止運作的問題要如何解決。 |
 | 2025 年 11 月 | [在 Cloud Manager 管道中提交雜湊的可見度延遲](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-28031) | 新文章 | 了解在 Cloud Manager 中使用私人 GitHub 存放庫觸發管道時，提交雜湊僅會在建置或程式碼品質步驟完成後才出現的問題要如何解決。 |
 | 2025 年 11 月 | [在 AEMaaCS 中建立專用輸出 IP 時，發生網路基礎結構異常](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-27884) | 新文章 | 了解在 AEMaaCS - Sites 中建立專用輸出 IP 時，因缺少主要區域參數而發生的問題要如何解決。 |
-| 2025 年 11 月 | AEMaaCS 中缺少[**[!UICONTROL 產生變化版本&#x200B;]**按鈕](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-27894) | 新文章 | 了解在 AEMaaCS - Sites 中，[!UICONTROL 內容片段編輯器]中缺少&#x200B;**[!UICONTROL 產生變化版本]**&#x200B;按鈕的問題要如何解決。 |
+| 2025 年 11 月 | AEMaaCS 中缺少[**[!UICONTROL 產生變化版本&#x200B;]**&#x200B;按鈕](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-27894) | 新文章 | 了解在 AEMaaCS - Sites 中，[!UICONTROL 內容片段編輯器]中缺少&#x200B;**[!UICONTROL 產生變化版本]**&#x200B;按鈕的問題要如何解決。 |
 | 2025 年 11 月 | [在 AEMaaCS 錯誤回應 (404/500) 中保留 `X-Correlation-Id`](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-27918) | 新文章 | 了解在 AEMaaCS 中，即使 AEM 記錄已確認完成設定，但在 *404 Not Found* 或 *500 Internal Server Error* 錯誤回應中仍缺少 `X-Correlation-Id` 標頭的問題要如何解決。 |
 | 2025 年 11 月 | [由於 OSGi 設定屬性無效，導致 AEM 部署管道失敗](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-27930) | 新文章 | 了解在 AEMaaCS 中，當中繼和生產環境中的部署管道在執行數小時後，於&#x200B;**[!UICONTROL 更新服務]**&#x200B;子步驟期間失敗的問題要如何解決。 |
 | 2025 年 11 月 | [AEM 部署後，由於遺失 OSGi 套件組合，導致 RDE 服務中斷](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-27376) | 新文章 | 了解將程式碼部署至 AEMaaCS RDE (快速開發環境) 時，當 `io.jsonwebtoken` 等第三方 OSGi 套件組合因更嚴格的 API 區域限制而無法解析並導致服務中斷的問題要如何解決。 |
@@ -360,7 +360,7 @@ New articles and updates to existing articles for [!DNL Customer Journey Analyti
 
 +++發行說明、新的教學課程，以及支援文章
 
-* 請參閱 [ [!DNL Adobe Commerce]  和  [!DNL Magento Open Source] 發行說明](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/notes/overview)以取得最新資訊。
+* 請參閱 [&#x200B; [!DNL Adobe Commerce]  和  [!DNL Magento Open Source] 發行說明](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/notes/overview)以取得最新資訊。
 * 請參閱「[Adobe [!DNL Commerce] 服務指南](https://experienceleague.adobe.com/zh-hant/docs/commerce/user-guides/home)」，查看 Commerce 服務版本資訊和文件。
 * 請參閱[產品可用性](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/product-availability)以存取個別的產品發行說明並確認可用性。
 
@@ -462,7 +462,7 @@ New or updated videos tutorials published for Adobe Campaign.
 
 如需詳細資訊，請參閱 [Journey Optimizer 發行說明](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer/using/whats-new/release-notes)。
 
-**注意：**[Journey Optimizer for B2B Edition](#journey-optimizer-b2b-edition) 是一款單獨的產品。
+**注意：**&#x200B;[Journey Optimizer for B2B Edition](#journey-optimizer-b2b-edition) 是一款單獨的產品。
 
 ### [!DNL Journey Optimizer] 最新教學課程 {#tutorials-ajo}
 
@@ -529,7 +529,7 @@ New or updated videos tutorials published for Adobe Campaign.
 發行版本：**2025 年 10 月**
 
 * [最新發行說明](https://experienceleague.adobe.com/zh-hant/docs/marketo/using/release-notes/current)
-* [!DNL Marketo Engage] [ 發行排程](https://experienceleague.adobe.com/zh-hant/docs/marketo/using/release-notes/release-schedule)
+* [!DNL Marketo Engage] [&#x200B; 發行排程](https://experienceleague.adobe.com/zh-hant/docs/marketo/using/release-notes/release-schedule)
 * Dynamic Chat [發行說明](https://experienceleague.adobe.com/zh-hant/docs/marketo/using/release-notes/dynamic-chat) (2025 年 6 月 30 日)
 
 <!-- ### New Marketo tutorials {#tutorials-marketo}
@@ -645,13 +645,13 @@ GenStudio for Performance Marketing 的教學影片。
 
 2025 年 10 月 29 日
 
-查看 [ [!DNL Advertising DSP]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/dsp/home)
+查看 [&#x200B; [!DNL Advertising DSP]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/dsp/home)
 
 ### [!DNL Advertising Search, Social, & Commerce] 中的新功能 {#advertising-search}
 
 2025 年 10 月 15 日
 
-查看 [ [!DNL Advertising Search, Social, & Commerce]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/search-social-commerce/home)
+查看 [&#x200B; [!DNL Advertising Search, Social, & Commerce]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/search-social-commerce/home)
 
 +++
 
