--- a/c-legacy-releases/2025/05142025.md
+++ b/c-legacy-releases/2025/05142025.md
@@ -94,7 +94,7 @@ ht-degree: 99%
 
 請參閱 [Experience Cloud 介面和管理](https://experienceleague.adobe.com/zh-hant/docs/core-services/interface/experience-cloud)指南，並獲得以下方面的協助：
 
-* **新增！**[Experience Cloud 應用程式中的生成式 AI](https://experienceleague.adobe.com/zh-hant/docs/core-services/interface/features/generative-ai)
+* **新增！**&#x200B;[Experience Cloud 應用程式中的生成式 AI](https://experienceleague.adobe.com/zh-hant/docs/core-services/interface/features/generative-ai)
 * [使用者管理和產品授權](https://experienceleague.adobe.com/zh-hant/docs/core-services/interface/administration/admin-console) (Admin Console)
 * [客戶屬性、客群庫和資產](https://experienceleague.adobe.com/zh-hant/docs/core-services/interface/services/overview)等
 
@@ -229,7 +229,7 @@ New or updated video tutorials published for Adobe Analytics.
 
 所有 [!DNL Experience Manager] 的發行說明都會保留在以下頁面：
 
-* [ [!DNL Experience Manager] as a Cloud Service 最新發行說明](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-cloud-service/content/release-notes/release-notes/release-notes-current)
+* [&#x200B; [!DNL Experience Manager] as a Cloud Service 最新發行說明](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-cloud-service/content/release-notes/release-notes/release-notes-current)
 * [最新版本概觀影片](https://experienceleague.adobe.com/zh-hant/docs/events/aemcs-release-update-recordings/overview)
 * [[!DNL Experience Manager] 版本更新和藍圖](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-release-information/aem-release-updates/home)
 * [[!DNL Experience Manager] 6.5 Service Pack 發行說明](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-65/content/release-notes/release-notes)
@@ -266,7 +266,7 @@ New or updated video tutorials published for Adobe Analytics.
 | 2025 年 4 月 | [修正 Adobe Experience Manager 的內容樹排序](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-26241) | 新文章 | 了解如何解決 Adobe Experience Manager (AEM) 目錄中資料夾數量超過 1,000 個，導致排序行為出現異常的問題。 |
 | 2025 年 4 月 | [解決在 AEM 中使用  [!DNL Dynamic Media]  造成的影片檔案音訊問題](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-26197) | 新文章 | 了解如何解決在 Adobe Experience Manager as a Cloud Service (AEMaaCS) 中使用 [!DNL Dynamic Media] 時造成的影片檔案音訊同步問題。 |
 | 2025 年 4 月 | [解決 AEM as a Cloud Service 中的無效使用者模擬錯誤](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-26118) | 新文章 | 了解如何解決在 [!DNL Adobe Experience Manager as a Cloud Service - Sites] 中模擬失敗後出現「*無效使用者*」錯誤的問題。 |
-| 2025 年 4 月 | [在 Adobe Experience Manager (AEM) 中無法設定  [!DNL Microsoft Translation Service] ](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-26096) | 新文章 | 了解如何解決在 Adobe Experience Manager (AEM) as a Cloud Service 中設定 [!DNL Microsoft Translation Service] 時，[!DNL AEM Translation] 設定表單無法辨識 [!DNL Microsoft Azure] 所提供的端點和金鑰的問題。 |
+| 2025 年 4 月 | [在 Adobe Experience Manager (AEM) 中無法設定  [!DNL Microsoft Translation Service] &#x200B;](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-26096) | 新文章 | 了解如何解決在 Adobe Experience Manager (AEM) as a Cloud Service 中設定 [!DNL Microsoft Translation Service] 時，[!DNL AEM Translation] 設定表單無法辨識 [!DNL Microsoft Azure] 所提供的端點和金鑰的問題。 |
 | 2025 年 4 月 | [監視 AEM 環境健康狀態](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25893) | 新文章 | 了解如何使用內建的健康檢查端點，透過程式化方式監視 AEM 環境的健康狀態。 |
 | 2025 年 4 月 | [解決內容片段匯出至 Adobe Target 的問題](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-26167) | 新文章 | 了解如何解決從 Adobe Experience Manager 匯出內容片段至 Adobe Target 時，出現「*與 Adobe Target 同步失敗*」錯誤的問題。 |
 | 2025 年 4 月 | [解決因  [!DNL Time-to-Live]  (TTL) 快取而造成的 AEM 發布伺服器高負載問題](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-26393) | 新文章 | 了解如何解決 [!DNL AEMaaCS - Sites] 中 AEM 發布伺服器因 5 分鐘 TTL 快取策略導致效能激增的問題。 |
@@ -282,7 +282,7 @@ New or updated video tutorials published for Adobe Analytics.
 
 +++發行說明、新的教學課程，以及支援文章
 
-* 請參閱 [ [!DNL Adobe Commerce]  和  [!DNL Magento Open Source] 發行說明](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/notes/overview)以取得最新資訊。
+* 請參閱 [&#x200B; [!DNL Adobe Commerce]  和  [!DNL Magento Open Source] 發行說明](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/notes/overview)以取得最新資訊。
 * 請參閱「[Adobe [!DNL Commerce] 服務指南](https://experienceleague.adobe.com/zh-hant/docs/commerce/user-guides/home)」，查看 Commerce 服務版本資訊和文件。
 * 請參閱[產品可用性](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/product-availability)以存取個別的產品發行說明並確認可用性。
 
@@ -371,7 +371,7 @@ New or updated videos tutorials published for Adobe Campaign.
 | 2025 年 4 月 | [Adobe Campaign 中的追蹤 URL 標記取代正確的 URL](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-26309) | 新文章 | 了解如何解決 Adobe Campaign 中追蹤 URL 標記的問題。 |
 | 2025 年 4 月 | [檔案擷取期間無法匯出列舉標籤](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-26155) | 新文章 | 了解如何解決 Adobe Campaign 工作流程中列舉標籤無法正確匯出的問題。 |
 | 2025 年 4 月 | [在 Adobe Campaign Standard 中管理內部電子郵件的隔離規則](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-26334) | 新文章 | 了解如何解決內部電子郵件被加入隔離表格，導致重要通訊受阻的問題。 |
-| 2025 年 4 月 | [解決 Adobe Campaign Classic 中密碼變更後的  [!DNL Snowflake] [!UICONTROL  資料載入]問題](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-26368) | 新文章 | 了解如何解決在更新「**[!UICONTROL 外部帳戶]**」密碼以便進行 Adobe Campaign Classic 的 [!DNL Snowflake] 連線時，新的[!UICONTROL 資料載入]活動發生的問題。 |
+| 2025 年 4 月 | [解決 Adobe Campaign Classic 中密碼變更後的  [!DNL Snowflake] [!UICONTROL &#x200B; 資料載入]問題](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-26368) | 新文章 | 了解如何解決在更新「**[!UICONTROL 外部帳戶]**」密碼以便進行 Adobe Campaign Classic 的 [!DNL Snowflake] 連線時，新的[!UICONTROL 資料載入]活動發生的問題。 |
 | 2025 年 4 月 | [無法檢視 Adobe Campaign Classic 資料夾中的搜尋篩選器](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-26160) | 新文章 | 了解如何解決 Adobe Campaign Classic Hosted (v7) 中的特定資料夾未顯示搜尋篩選器的問題。 |
 | 2025 年 4 月 | [Adobe Campaign Classic 中電子郵件開信率下降](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-26266) | 新文章 | 了解如何解決雖然工作流程或內容未有任何變更，但電子郵件開信率下降的問題。 |
 | 2025 年 4 月 | [無法登入  [!DNL Adobe Campaign Managed Cloud]](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-26119) | 新文章 | 了解如何解決登入 [!DNL Adobe Campaign Managed Cloud] 時出現錯誤訊息「*未知的驗證模式：交涉」時的問題。* |
@@ -393,7 +393,7 @@ New or updated videos tutorials published for Adobe Campaign.
 
 * 請參閱 [Journey Optimizer 發行說明](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer/using/whats-new/release-notes)取得更新和協助
 
-**注意：**[Journey Optimizer for B2B Edition](#journey-optimizer-b2b-edition) 是一款單獨的產品。
+**注意：**&#x200B;[Journey Optimizer for B2B Edition](#journey-optimizer-b2b-edition) 是一款單獨的產品。
 
 ### [!DNL Journey Optimizer] 最新教學課程 {#tutorials-ajo}
 
@@ -593,13 +593,13 @@ New tutorials published for Adobe Marketo.
 
 2025 年 5 月 7 日
 
-查看 [ [!DNL Advertising DSP]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/dsp/home)
+查看 [&#x200B; [!DNL Advertising DSP]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/dsp/home)
 
 ### [!DNL Advertising Search, Social, & Commerce] 中的新功能 {#advertising-search}
 
 2024 年 3 月 26 日
 
-查看 [ [!DNL Advertising Search, Social, & Commerce]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/search-social-commerce/home)
+查看 [&#x200B; [!DNL Advertising Search, Social, & Commerce]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/search-social-commerce/home)
 
 +++
 
